<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="create_note">Create Note</string>
    <string name="set_note_title">Note Title</string>
    <string name="set_note_message">Note message</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="all_notes">All Notes</string>
    <string name="add_note">Add note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_note">Delete note</string>
    <string name="ask_to_delete_note">Are you sure you want to delete this note?</string>
</resources>